--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -112,12 +112,6 @@
 
 }
 
-/* Import Cornerstone Font */
-@font-face {
-  font-family: "Cornerstone";
-  src: url("../_assets/fonts/Cornerstone.ttf") format("truetype");
-}
-
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* NOTE
@@ -141,7 +135,8 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 300; }
-h1 { font-family: 'Cornerstone'; font-size: 4.0rem; line-height: 0.75;  letter-spacing: 2px;}
+/*h1 { font-family: 'Exo', sans-serif; font-size: 4.0rem; line-height: 0.75;  letter-spacing: 2px;}*/
+h1 { font-family: 'Merriweather', serif; font-weight: 700; font-size: 4.0rem; line-height: 0.75;  letter-spacing: 2px;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
@@ -446,20 +441,22 @@ there.
   padding-top: 56px;
 }
 
-#project-color {
-  color: #74E3B5;
-}
-
-#project-color:hover {
-  opacity: 0.6;
-}
-
-#project-wip {
-  color: #9B9B9B;
-}
-
 .contact-a {
   color: #4A4A4A;
   text-decoration: none;
   border-bottom: 2px solid #5E1AFF;
+}
+
+#project-wip {
+  opacity: 0.5;
+}
+
+#project-title {
+  font-size: 9.6rem;
+  text-transform: lowercase;
+  letter-spacing: 5px;
+}
+
+#project-title:hover {
+  opacity: 0.6;
 }
