--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -135,7 +135,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 300; }
-/*h1 { font-family: 'Exo', sans-serif; font-size: 4.0rem; line-height: 0.75;  letter-spacing: 2px;}*/
+h1 { font-family: 'Exo', sans-serif; font-size: 4.0rem; line-height: 0.75;  letter-spacing: 2px;}
 h1 { font-family: 'Merriweather', serif; font-weight: 700; font-size: 4.0rem; line-height: 0.75;  letter-spacing: 2px;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
@@ -154,7 +154,15 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 }
 
 p {
+  font-size: 1.6rem;
   margin-top: 0; }
+
+.text {
+  letter-spacing: 1.2px;
+  font-size: 1.8rem;
+  font-family: 'Merriweather Sans', sans-serif;
+  font-weight: 300;
+}
 
 
 /* Links
@@ -291,7 +299,7 @@ label > .label-body {
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 ul {
-  list-style: circle inside; }
+  list-style: circle; padding-top: 16px;}
 ol {
   list-style: decimal inside; }
 ol, ul {
@@ -457,6 +465,22 @@ there.
   letter-spacing: 5px;
 }
 
-#project-title:hover {
+#project-title-secondary {
+  font-size: 5.6rem;
+  text-transform: lowercase;
+  letter-spacing: 2px;
+}
+
+a > #project-title:hover {
   opacity: 0.6;
+}
+
+.landing-img {
+  padding-top: 24px;
+  padding-bottom: 48px;
+}
+
+.section-header {
+  font-weight: 700;
+  color: #5E1AFF;
 }
