--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -505,3 +505,10 @@ a > #project-title:hover {
   padding-left: 16px;
   padding-right: 16px;
 }
+
+@media (max-width: 400px) {
+  .media-contact {
+    font-size: 2rem;
+    letter-spacing: 2px;
+  }
+}
