--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -495,6 +495,14 @@ a > #project-title:hover {
   box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.2);
 }
 
+.inline-img-nopad {
+  border-radius: 4px;
+  background-color: #FFFFFF;
+  -webkit-box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.2);
+}
+
 .section-header {
   font-weight: 700;
   color: #5E1AFF;
