--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -513,3 +513,15 @@ a > #project-title:hover {
   padding-left: 16px;
   padding-right: 16px;
 }
+
+.project-border {
+  border: 1px solid #5E1AFF;
+}
+
+#grad-prim {
+  background: rgba(94,26,255, 0.3); /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left, rgba(94,26,255, 0), rgba(94,26,255, 0.05)); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(right, rgba(94,26,255, 0), rgba(94,26,255, 0.05)); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(right, rgba(94,26,255, 0), rgba(94,26,255, 0.05)); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to right, rgba(94,26,255, 0), rgba(94,26,255, 0.05)w); /* Standard syntax */
+}
