--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -31,7 +31,7 @@
 .container {
   position: relative;
   width: 100%;
-  max-width: 960px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box; }
@@ -112,21 +112,20 @@
 
 }
 
+
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* NOTE
 html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
-  font-size: 62.5%;
-  background-color: #F5F5F5; }
+  font-size: 62.5%; }
 body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
-  letter-spacing: 0.5px;
   font-weight: 400;
-  font-family: 'Overpass Mono', monospace;
-  color: #4A4A4A; }
+  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #222; }
 
 
 /* Typography
@@ -135,8 +134,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 300; }
-h1 { font-family: 'Exo', sans-serif; font-size: 4.0rem; line-height: 0.75;  letter-spacing: 2px;}
-h1 { font-family: 'Merriweather', serif; font-weight: 700; font-size: 4.0rem; line-height: 0.75;  letter-spacing: 2px;}
+h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
@@ -154,24 +152,15 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 }
 
 p {
-  font-size: 1.6rem;
   margin-top: 0; }
-
-.text {
-  letter-spacing: 1.2px;
-  font-size: 1.8rem;
-  font-family: 'Merriweather Sans', sans-serif;
-  font-weight: 300;
-}
 
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #5E1AFF;
-  text-decoration: none; }
+  color: #1EAEDB; }
 a:hover {
-  color: #8658F1; }
+  color: #0FA0CE; }
 
 
 /* Buttons
@@ -299,7 +288,7 @@ label > .label-body {
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 ul {
-  list-style: circle; padding-top: 16px;}
+  list-style: circle inside; }
 ol {
   list-style: decimal inside; }
 ol, ul {
@@ -427,126 +416,3 @@ there.
 
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
-
-
-/* My own CSS
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.headertext {
-  letter-spacing: 1px;
-}
-
-.section-div {
-  padding-top: 96px;
-}
-
-.section-caption {
-  font-size: 1.4rem;
-  font-weight: 200;
-  opacity: 0.7;
-}
-
-.project-div {
-  padding-top: 56px;
-}
-
-.contact-a {
-  color: #4A4A4A;
-  text-decoration: none;
-  border-bottom: 2px solid #5E1AFF;
-}
-
-#project-wip {
-  opacity: 0.5;
-}
-
-#project-title {
-  font-size: 9.6rem;
-  text-transform: lowercase;
-  letter-spacing: 5px;
-}
-@media (max-width: 400px) {
-  #project-title {
-    font-size: 4rem;
-    letter-spacing: 2px;
-  }
-}
-
-#project-title-secondary {
-  font-size: 5.6rem;
-  text-transform: lowercase;
-  letter-spacing: 0px;
-  font-style: normal;
-}
-
-a > #project-title:hover {
-  opacity: 0.6;
-}
-
-.landing-img {
-  margin-top: 24px;
-  margin-bottom: 48px;
-}
-
-.inline-img {
-  padding: 16px;
-  border-radius: 4px;
-  background-color: #FFFFFF;
-  -webkit-box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.2);
-  -moz-box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.2);
-  box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.2);
-}
-
-.inline-img-nopad {
-  border-radius: 4px;
-  background-color: #FFFFFF;
-  -webkit-box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.2);
-  -moz-box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.2);
-  box-shadow: 0px 10px 30px 0px rgba(0,0,0,0.2);
-}
-
-.section-header {
-  font-weight: 700;
-  color: #5E1AFF;
-}
-
-.img-caption {
-  opacity: 0.8;
-  padding-left: 16px;
-  padding-right: 16px;
-}
-
-.work-border {
-  border: 1px solid #5E1AFF;
-}
-
-.project-border {
-  border: 1px solid #74E3B5;
-}
-
-.project-border-wip {
-  border: 1px solid rgba(44,44,44,0.5);
-}
-
-#grad-prim {
-  background: rgba(94,26,255, 0.3); /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(left, rgba(94,26,255, 0), rgba(94,26,255, 0.05)); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(right, rgba(94,26,255, 0), rgba(94,26,255, 0.05)); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(right, rgba(94,26,255, 0), rgba(94,26,255, 0.05)); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to right, rgba(94,26,255, 0), rgba(94,26,255, 0.05)w); /* Standard syntax */
-}
-
-#grad-second {
-  background: rgba(116,227,181, 0.3); /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(left, rgba(116, 227, 181, 0), rgba(116, 227, 181, 0.05)); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(right, rgba(116, 227, 181, 0), rgba(116, 227, 181, 0.05)); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(right, rgba(116, 227, 181, 0), rgba(116, 227, 181, 0.05)); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to right, rgba(116, 227, 181, 0), rgba(116, 227, 181, 0.05)w); /* Standard syntax */
-}
-
-#grad-wip {
-  background: rgba(74,74,74, 0.3); /* For browsers that do not support gradients */
-  background: -webkit-linear-gradient(left, rgba(74,74,74, 0), rgba(74,74,74, 0.05)); /* For Safari 5.1 to 6.0 */
-  background: -o-linear-gradient(right, rgba(74,74,74, 0), rgba(74,74,74, 0.05)); /* For Opera 11.1 to 12.0 */
-  background: -moz-linear-gradient(right, rgba(74,74,74, 0), rgba(74,74,74, 0.05)); /* For Firefox 3.6 to 15 */
-  background: linear-gradient(to right, rgba(74,74,74, 0), rgba(74,74,74, 0.05)); /* Standard syntax */
-}
