changed src names

--- a/virta-css.css
+++ b/virta-css.css
@@ -190,7 +190,7 @@ a:hover {
 /* Images
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .bg-img {
-  background:url(../img/background.jpg);
+  background:url(../images/background.jpg);
   background-size: cover;
   background-position: 85%;
 
